# Trie

./: CMakeLists.txt  main.cpp
src/Progressive/: Progressive.cpp  Progressive_radix_index.cpp
src/file_manager/: load_file.cpp  load_file.h
src/include/: Column.cpp  Column.h  Global_parameters.h  InternalNode.cpp  InternalNode.h  LeafNode.cpp  LeafNode.h  Node.cpp  Node.h  ResultStruct.cpp  ResultStruct.h  Trie.cpp  Trie.h  structs.h
